# openfe-benchmarks

./: .gitattributes  .gitignore  Comparing_OpenFE_and_Perses_gas_phase.ipynb  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/PULL_REQUEST_TEMPLATE/: data_submission.md  results_submission.md
.github/workflows/: ci.yaml  ci.yml
benchmark_results/OpenFE_2022/: gen_yaml.py  hif2a_results.yaml  mcl1_results.yaml  p38_results.yaml  thrombin_results.yaml  tnsk2_results.yaml  tyk2_results.yaml
benchmark_results/OpenFE_2022/csv-files/: hif2a-calc.csv  hif2a-exp.csv  mcl1-calc.csv  mcl1-exp.csv  p38-calc.csv  p38-exp.csv  thrombin-calc.csv  thrombin-exp.csv  tnsk2-calc.csv  tnsk2-exp.csv  tyk2-calc.csv  tyk2-exp.csv
devtools/conda-envs/: environment.yml
examples/: 1_initializing_benchmark_data.ipynb  2_benchmark_data_with_openfe.ipynb  ExploringEdges.ipynb  RunningTYK2Edge.ipynb  building_networks.ipynb  calculation_setup.ipynb  using_benchmark_data.ipynb  using_industry_benchmark_systems.ipynb
openfe_benchmarks/: __init__.py  benzenes.py  cmet.py  hif2a.py  mcl1.py  p38.py  ptp1b.py  syk.py  thrombin.py  tnsk2.py  tyk2.py  utils.py
openfe_benchmarks/data/: README.md  __init__.py  _benchmark_systems.py  _results_utils.py  benchmark_system_indexing.yml  cmet_ligands.sdf  mcl1_ligands.sdf  mcl1_old_ligands.sdf  p38_ligands.sdf  ptp1b_ligands.sdf  syk_ligands.sdf  thrombin_ligands.sdf  tnsk2_ligands.sdf  tyk2_ligands.sdf  tyk2_old_ligands.sdf
openfe_benchmarks/data/benchmark_systems/: README.md
openfe_benchmarks/data/data_generation/: README.md  README.txt  charge_freesolv.py  charge_mnsol.py  charge_molecules.py  charge_offmol.py  conda-lock_linux-64.yml  define_freesolv_mnsol_openff_subsets.py  define_freesolv_mnsolv_openff_subsets.py  define_freesolv_openff_subset.py  define_mnsol_openff_subset.py  generate_freesolv_exp_data.py  generate_industry_lomap_networks.py  generate_industry_ref_data.py  generate_lomap_networks.py  generate_mnsol_data.py  generate_ref_brd4_tsai.py  generate_ross_ref_data.py  generate_septop_bace_ref_data.py  mnsol-name-to-smiles.json
openfe_benchmarks/data/industry_benchmark_systems/: README.md
openfe_benchmarks/data/old/: tyk2_ligands.sdf
openfe_benchmarks/data/tests/: test_benchmark_data.py
openfe_benchmarks/results/: README.md
openfe_benchmarks/results/2026-02-12_charge_change_interpolation_test/: generate_networks.py  submission.yaml
openfe_benchmarks/results/2026-03-18-openmm-840-qa-testing/: computational_results.json  run_prepare_metadata.sh  submission.yaml
openfe_benchmarks/results/2026-06-22-tyk2-alchemicalarchive-test/: computational_results.json  run_prepare_metadata.sh  submission.yaml
openfe_benchmarks/results/hif2a/: hif2a_kartograf_mapper_lomap_network-2023_09_11.json  hif2a_kartograf_mapper_mst_network-2023_08_31.json
openfe_benchmarks/results/mcl1/: mcl1_kartograf_mapper_lomap_network-2023_08_30.json  mcl1_kartograf_mapper_mst_network-2023_08_28.json  mcl1_lomap_mapper_lomap_network-2023_09_14.json  mcl1_lomap_mapper_mst_network-2023_09_14.json  mcl1_lomap_mapper_radial_network-2023_09_14.json
openfe_benchmarks/results/p38/: p38_kartograf_mapper_lomap_network-2023_08_31.json  p38_kartograf_mapper_mst_network-2023_08_31.json
openfe_benchmarks/results/pfkfb3/: pfkfb3_kartograf_mapper_lomap_network-2023_09_11.json  pfkfb3_kartograf_mapper_mst_network-2023_09_11.json
openfe_benchmarks/results/ptp1b/: ptp1b_kartograf_mapper_lomap_network-2023_08_31.json  ptp1b_kartograf_mapper_mst_network-2023_08_28.json  (+6 more)
openfe_benchmarks/scripts/: _example_alchemiscale_gather.py  _example_generate_results_local.py  _example_plan_asfe.py  _example_plan_rbfe.py  _example_plan_rbfe_pontibus.py  _example_plan_septop.py  _example_plot_rbfe.py  _tmp_alchemiscale_gather.py  calculation_setup.py  create_alchemical_networks_ambertools.py  create_alchemical_networks_elf10.py  create_ligand_network_ambertools.py  create_ligand_network_elf10.py  example_generate_results.py  example_generate_results_local.py  example_plan_rbfe.py  gather_2.1.1.py  gather_2.2.1.py  monitor.py  prepare_metadata_submission.py  submit_elf10_2.1.1.py  submit_elf10_2.2.1.py  utils.py
openfe_benchmarks/tests/: test_benchmark_data.py  test_benchmark_index.py  test_import.py  test_industry_benchmark_systems.py  test_scripts.py  test_systems.py
test_results/hif2a/: README.md  arsenic.csv  plot.py
test_results/mcl1/: arsenic.csv  plot.py
test_results/tnks2/: arsenic-fix.csv  arsenic.csv  plot.py
test_results/tyk2/: arsenic.csv  plot.py
(+668 files in other folders)
