[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "openfe_benchmarks"
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
license-expression = "MIT"
keywords = ["bioinformatics", "chemistry", "science"]
authors = [
    { name = "The OpenFE developers", email = "openfe@omsf.io" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
urls = { "Homepage" = "https://github.com/OpenFreeEnergy/openfe-benchmarks" }

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
]

[project.dependencies]
gufe = "*"
py3dmol = "*"

[tool.mypy]
files = "openfe_benchmarks"
ignore_missing_imports = true

[tool.versioneer]
VCS = "git"
style = "pep440-post"
tag_prefix = ""