[metadata]
name = openfe_benchmarks
description = 
long_description = file: README.md
long_description_type = text/markdown
author = The OpenFE developers
author_email = openfe@omsf.io
license = MIT
license_file = LICENSE
url = https://github.com/OpenFreeEnergy/openfe-benchmarks
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
zip_safe = False
python_requires = >= 3.8
install_requires =
    openfe
packages = find:

[options.extras_require]
test =
    pytest
    pytest-xdist

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440-post
tag_prefix = ''

[mypy]
files=openfe_benchmarks
ignore_missing_imports=true
